testcases/valid/substitution.prove
[A] [[A]:sth] [B] [[x][[x]op[B]]=>[[]C]] => [[[[A]:sth]op[B]] => [[]C]]
