testcases/invalid/substitution4.prove
[A] [[A]:sth] [B] [[B]:st] [[[x]op[y]]=>[[]C]] => [[[[A]:sth]op[[B]:sth]] => [[]C]]
